add polymerBehavior Things.ResourceSelectorBehavior

--- a/things-resource-selector-behavior.html
+++ b/things-resource-selector-behavior.html
@@ -12,6 +12,8 @@ window.Things = window.Things || {};
  * 
  * ResourceSelector는 Form이나 Grid에서 오픈할 수 있다.
  *
+ * @@polymerBehavior Things.ResourceSelectorBehavior
+ * 
  * @demo demo/index.html
  */
 Things.ResourceSelectorBehavior = {
