--- a/things-selector-form-behavior.html
+++ b/things-selector-form-behavior.html
@@ -29,11 +29,11 @@
 window.Things = window.Things || {};
 
 /**
- * 기본 Form Behavior
- * Things.FormBehavior를 사용하고자 한다면 반드시 reconfigureMyForm() 함수를 구현해야 한다.
- * 구현 내용 - Things.FormBehavior를 이용하여 Form을 구성한다.
+ * 기본 Selector Form Behavior
+ * Things.SelectorFormBehavior 사용하고자 한다면 반드시 reconfigureMyForm() 함수를 구현해야 한다.
+ * 구현 내용 - Things.SelectorFormBehavior 이용하여 Form을 구성한다.
  *
- * @polymerBehavior Things.FormBehavior
+ * @polymerBehavior Things.SelectorFormBehavior
  */
 Things.SelectorFormBehaviorImpl = {
 
