--- a/things-selector-form-search-behavior.html
+++ b/things-selector-form-search-behavior.html
@@ -12,7 +12,7 @@ window.Things = window.Things || {};
  * 이 Behavior를 사용하려면 function submitMyForm()와 properties 중에 formFields 반드시 존재하여야 한다.
  * searchForm은 조회를 위한 submitForm 기능이고 formFields는 폼 구성을 위한 Form Field Meta 정보이다.
  *
- * @polymerBehavior Things.SearchFormBehavior
+ * @polymerBehavior Things.SelectorFormSearchBehavior
  */
 Things.SelectorFormSearchBehaviorImpl = {
 
