--- a/things-resource-selector-behavior.html
+++ b/things-resource-selector-behavior.html
@@ -12,7 +12,7 @@ window.Things = window.Things || {};
  * 
  * ResourceSelector는 Form이나 Grid에서 오픈할 수 있다.
  *
- * @@polymerBehavior Things.ResourceSelectorBehavior
+ * @polymerBehavior Things.ResourceSelectorBehavior
  * 
  * @demo demo/index.html
  */
