Resource Selector에서 버튼 제거

--- a/things-selector-content.html
+++ b/things-selector-content.html
@@ -67,10 +67,7 @@ Things Reource Content는 검색 폼, 그리드가 기본으로 표시되고 그
 				per-page="{{perPage}}"
 				data="[[lastResponse.items]]"
 				total-count="[[lastResponse.total]]"
-				grid-save-action="[[gridSaveUrl]]"
-				export-file-name="[[title]]"
-				export-sheet-name="[[title]]"
-				enable-detail-column="[[enableDetailColumn]]"
+				buttons='[]'
 				paginatable>
 			</things-resource-grid>
 		</div>
