demo link fix & version to 0.1.5

--- a/things-resource-dialog.html
+++ b/things-resource-dialog.html
@@ -10,7 +10,7 @@ ResourceSelector를 위한 다이얼로그.
 
   <things-resource-dialog></things-resource-dialog>
 
-@demo demo/demo-resource-dialog.html
+@demo demo/index.html
 -->
 
 <dom-module id="things-resource-dialog">
