change 'input' to 'things-input-field' & version 0.1.6

--- a/things-resource-field.html
+++ b/things-resource-field.html
@@ -1,10 +1,10 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-icon/iron-icon.html">
-<link rel="import" href="../paper-input/paper-input.html">
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 
 <link rel="import" href="./things-resource-selector-behavior.html">
 <link rel="import" href="../things-combo/things-combo.html">
+<link rel="import" href="../things-input-field/things-input-field.html">
 
 <!--
 Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 input field에 표시하는 컴포넌트 
@@ -36,14 +36,14 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
     <input is="iron-input" name="[[idName]]" bind-value="[[idValue]]" hidden>
 
     <p class="paper-font-caption">[[label]]</p>
-    <input is="iron-input" value="[[displayValue]]" readonly>
+    <things-input-field value="[[displayValue]]" readonly></things-input-field>
     <iron-icon icon="icons:list" prefix on-tap="openResourceSelector" hidden="[[readOnly]]"></iron-icon>
     <paper-icon-button suffix on-tap="clearValue" icon="clear" alt="clear" title="clear" hidden="[[readOnly]]">
     </paper-icon-button>
   </template>
 
   <script type="text/javascript">
-  	(function() {
+    (function() {
       Polymer({
         is: "things-resource-field",
 
@@ -194,6 +194,6 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
         }
 
       })
-  	})();
+    })();
   </script>
 </dom-module>
