Bug Fix - things-resource-field

--- a/things-resource-field.html
+++ b/things-resource-field.html
@@ -46,7 +46,7 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
   </style>
 
   <template>
-    <input is="iron-input" name="[[name]]" bind-value="[[value]]" hidden>
+    <input is="iron-input" bind-value="[[value]]" hidden>
     <input is="iron-input" name="[[idName]]" bind-value="[[idValue]]" hidden>
 
     <label>[[label]]</label>
