--- a/things-selector-form-search-behavior.html
+++ b/things-selector-form-search-behavior.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 
 <link rel="import" href="../things-ajax/things-resource-search-behavior.html">
-<link rel="import" href="things-selector-form-behavior.html">
+<link rel="import" href="./things-selector-form-behavior.html">
 
 <script>
 
@@ -16,7 +16,7 @@ window.Things = window.Things || {};
  */
 Things.SelectorFormSearchBehaviorImpl = {
 
-	properties: {
+  properties: {
 
     /**
      * form이 active 상태인지 여부. active 상태인 경우에만 form submit이 가능하다.
@@ -25,6 +25,14 @@ Things.SelectorFormSearchBehaviorImpl = {
       type: Boolean
     },
 
+    /**
+     * 현재 페이지
+     */
+    page: {
+      type: Number,
+      notify: true
+    },
+    
     /**
      * TODO limit으로 변경. 현재는 perPage가 변경될 때 ResourceSearchBehavior의 limit변수를 변경해 줌 
      * Pagination을 위한 설정. 페이지에 표시할 데이터 개수
@@ -70,11 +78,11 @@ Things.SelectorFormSearchBehaviorImpl = {
      *
      * @event things-form-submit-error
      */
-	},
+  },
 
   observers: [
-  	'_pageChanged(page)',
-  	'_perPageChanged(perPage)'
+    '_pageChanged(page)',
+    '_perPageChanged(perPage)'
   ],
 
   /**
@@ -94,7 +102,7 @@ Things.SelectorFormSearchBehaviorImpl = {
    * @param {Number} perPage 페이지 당 표시할 레코드 수 
    */
   _perPageChanged: function(perPage) {
-  	this.limit = perPage;
+    this.limit = perPage;
   },
 
   /**
@@ -103,26 +111,26 @@ Things.SelectorFormSearchBehaviorImpl = {
    * 
    * @param {Object} params
    */
-	_resetResourceSearchParams: function(params) {
-		this.queryFields = [];
-		if(!params) return;
+  _resetResourceSearchParams: function(params) {
+    this.queryFields = [];
+    if(!params) return;
 
-		for(prop in params) {
-			if(params[prop] && params[prop] != '') {
-				var fieldModels = this.formFields.filter(function(formField) { return formField.name == prop });
+    for(prop in params) {
+      if(params[prop] && params[prop] != '') {
+        var fieldModels = this.formFields.filter(function(formField) { return formField.name == prop });
 
-				if (fieldModels && fieldModels.length > 0) {
-					var fieldModel = fieldModels[0];
-					var query = { name : prop, operator : fieldModel.op };
-					if(!this.nonValueOpers.includes(fieldModel.op)) {
-						query.value = params[prop];
-					}
+        if (fieldModels && fieldModels.length > 0) {
+          var fieldModel = fieldModels[0];
+          var query = { name : prop, operator : fieldModel.op };
+          if(!this.nonValueOpers.includes(fieldModel.op)) {
+            query.value = params[prop];
+          }
 
-					this.queryFields.push(query);
-				}
-			}
-		}
-	}, 
+          this.queryFields.push(query);
+        }
+      }
+    }
+  }, 
 
   /**
    * Submit 전에 전처리 핸들
@@ -140,10 +148,14 @@ Things.SelectorFormSearchBehaviorImpl = {
     }
 
     form.request.params || {};
+
     if(this.paramType == 'RESOURCE') {
-    	this._resetResourceSearchParams(form.request.params);
+      this._resetResourceSearchParams(form.request.params);
       form.request.params = this.handleRequestParams();
-    }    
+
+    } else if(this.paramType == 'DIY') {
+      form.request.params = this.handleDiyRequestParams(form.request.params);
+    }
   },
 
   /**
@@ -169,8 +181,8 @@ Things.SelectorFormSearchBehaviorImpl = {
 };
 
 Things.SelectorFormSearchBehavior = [
-	Things.SelectorFormSearchBehaviorImpl,
-	Things.ResourceSearchBehavior
+  Things.SelectorFormSearchBehaviorImpl,
+  Things.ResourceSearchBehavior
 ];
 
 </script>
