--- a/things-selector-content.html
+++ b/things-selector-content.html
@@ -39,7 +39,7 @@ Things Reource Content는 검색 폼, 그리드가 기본으로 표시되고 그
 			}
 		</style>
 
-		<div class="layout vertical">
+		<div class="layout vertical flex">
 			<things-ajax 
 				auto
 				id="resource-meta"
