Selector Type 지원

--- a/elements.html
+++ b/elements.html
@@ -3,6 +3,8 @@
 <link rel="import" href="things-resource-selector.html">
 <link rel="import" href="things-resource-selector-behavior.html">
 <link rel="import" href="things-selector-content.html">
+<link rel="import" href="things-selector-content-by-menu.html">
+<link rel="import" href="things-selector-content-by-entity.html">
 <link rel="import" href="things-selector-form-behavior.html">
 <link rel="import" href="things-selector-form-search-behavior.html">
 <link rel="import" href="things-selector-form.html">
